--- a/_modules/deepecho/model/alpha.html
+++ b/_modules/deepecho/model/alpha.html
@@ -264,6 +264,10 @@
     <span class="sd">&quot;&quot;&quot;No time index, multiple entities, fixed length.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">nb_epochs</span><span class="o">=</span><span class="mi">128</span><span class="p">,</span> <span class="n">use_sampling</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">nb_epochs</span> <span class="o">=</span> <span class="n">nb_epochs</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">use_sampling</span> <span class="o">=</span> <span class="n">use_sampling</span>
+
 <div class="viewcode-block" id="AlphaModel.check"><a class="viewcode-back" href="../../../api/deepecho.model.alpha.html#deepecho.model.AlphaModel.check">[docs]</a>    <span class="nd">@classmethod</span>
     <span class="k">def</span> <span class="nf">check</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">dataset</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">dataset</span><span class="o">.</span><span class="n">time_idx</span><span class="p">:</span>
@@ -273,7 +277,7 @@
         <span class="k">if</span> <span class="ow">not</span> <span class="n">dataset</span><span class="o">.</span><span class="n">fixed_length</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;This model requires a fixed length.&quot;</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="AlphaModel.fit"><a class="viewcode-back" href="../../../api/deepecho.model.alpha.html#deepecho.model.AlphaModel.fit">[docs]</a>    <span class="k">def</span> <span class="nf">fit</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dataset</span><span class="p">,</span> <span class="n">nb_epochs</span><span class="o">=</span><span class="mi">64</span><span class="p">):</span>
+<div class="viewcode-block" id="AlphaModel.fit"><a class="viewcode-back" href="../../../api/deepecho.model.alpha.html#deepecho.model.AlphaModel.fit">[docs]</a>    <span class="k">def</span> <span class="nf">fit</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dataset</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">check</span><span class="p">(</span><span class="n">dataset</span><span class="p">)</span>
 
         <span class="c1"># Transform dataset into input space.</span>
@@ -286,7 +290,7 @@
 
         <span class="bp">self</span><span class="o">.</span><span class="n">_model</span> <span class="o">=</span> <span class="n">Alpha1</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_input_size</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_input_size</span><span class="p">)</span>
         <span class="n">optimizer</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">optim</span><span class="o">.</span><span class="n">Adam</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_model</span><span class="o">.</span><span class="n">parameters</span><span class="p">(),</span> <span class="n">lr</span><span class="o">=</span><span class="mf">1e-3</span><span class="p">)</span>
-        <span class="k">for</span> <span class="n">epoch</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">nb_epochs</span><span class="p">):</span>
+        <span class="k">for</span> <span class="n">epoch</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">nb_epochs</span><span class="p">):</span>
             <span class="n">Y</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_model</span><span class="p">(</span><span class="n">X</span><span class="p">)</span>  <span class="c1"># (N, C_in, L) -&gt; (N, C_out, L)</span>
 
             <span class="n">loss</span> <span class="o">=</span> <span class="mf">0.0</span>
@@ -371,9 +375,20 @@
         <span class="sd">&quot;&quot;&quot;Transform from latent space to input space.</span>
 
 <span class="sd">        This maps categorical columns from the latent representation into a</span>
-<span class="sd">        one-hot-like representation.</span>
+<span class="sd">        one-hot-like representation. If `use_sampling` is True, then the</span>
+<span class="sd">        categorical values are sampled from the distribution as opposed to</span>
+<span class="sd">        simply choosing the maximum likelihood value.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">x</span>  <span class="c1"># TODO: Implement sampling for categorical columns.</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">use_sampling</span><span class="p">:</span>
+            <span class="n">batch_size</span><span class="p">,</span> <span class="n">input_size</span><span class="p">,</span> <span class="n">seq_len</span> <span class="o">=</span> <span class="n">x</span><span class="o">.</span><span class="n">shape</span>
+            <span class="k">for</span> <span class="n">col_name</span><span class="p">,</span> <span class="n">indices</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_categorical</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+                <span class="n">idx</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">indices</span><span class="o">.</span><span class="n">values</span><span class="p">())</span>
+                <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">seq_len</span><span class="p">):</span>
+                    <span class="n">p</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">nn</span><span class="o">.</span><span class="n">functional</span><span class="o">.</span><span class="n">softmax</span><span class="p">(</span><span class="n">x</span><span class="p">[:,</span> <span class="n">idx</span><span class="p">,</span> <span class="n">i</span><span class="p">],</span> <span class="n">dim</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
+                    <span class="n">x_new</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="n">p</span><span class="o">.</span><span class="n">size</span><span class="p">())</span>
+                    <span class="n">x_new</span><span class="o">.</span><span class="n">scatter_</span><span class="p">(</span><span class="n">dim</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="n">torch</span><span class="o">.</span><span class="n">multinomial</span><span class="p">(</span><span class="n">p</span><span class="p">,</span> <span class="mi">1</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
+                    <span class="n">x</span><span class="p">[:,</span> <span class="n">idx</span><span class="p">,</span> <span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="n">x_new</span>
+        <span class="k">return</span> <span class="n">x</span>
 
     <span class="k">def</span> <span class="nf">_from_input</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Transform from input space to dataframe.</span>
