deploy: ee7cf8f5f3d0b11f516bc46c9c6223f1f0312744

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -196,6 +196,8 @@
 <li><a href="deepecho/dataset.html">deepecho.dataset</a></li>
 <li><a href="deepecho/model/alpha.html">deepecho.model.alpha</a></li>
 <li><a href="deepecho/model/base.html">deepecho.model.base</a></li>
+<li><a href="deepecho/model/beta.html">deepecho.model.beta</a></li>
+<li><a href="deepecho/model/gamma.html">deepecho.model.gamma</a></li>
 </ul>
 
            </div>
