--- a/genindex.html
+++ b/genindex.html
@@ -206,6 +206,7 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -238,6 +239,16 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.model.beta.html#deepecho.model.beta.Beta">Beta (class in deepecho.model.beta)</a>
+</li>
+      <li><a href="api/deepecho.model.html#deepecho.model.BetaModel">BetaModel (class in deepecho.model)</a>
+
+      <ul>
+        <li><a href="api/deepecho.model.beta.html#deepecho.model.beta.BetaModel">(class in deepecho.model.beta)</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="C">C</h2>
@@ -249,6 +260,14 @@
         <li><a href="api/deepecho.model.html#deepecho.model.AlphaModel.check">(deepecho.model.AlphaModel class method)</a>
 </li>
         <li><a href="api/deepecho.model.base.html#deepecho.model.base.Model.check">(deepecho.model.base.Model class method)</a>
+</li>
+        <li><a href="api/deepecho.model.beta.html#deepecho.model.beta.BetaModel.check">(deepecho.model.beta.BetaModel class method)</a>
+</li>
+        <li><a href="api/deepecho.model.html#deepecho.model.BetaModel.check">(deepecho.model.BetaModel class method)</a>
+</li>
+        <li><a href="api/deepecho.model.gamma.html#deepecho.model.gamma.GammaModel.check">(deepecho.model.gamma.GammaModel class method)</a>
+</li>
+        <li><a href="api/deepecho.model.html#deepecho.model.GammaModel.check">(deepecho.model.GammaModel class method)</a>
 </li>
         <li><a href="api/deepecho.model.html#deepecho.model.Model.check">(deepecho.model.Model class method)</a>
 </li>
@@ -273,10 +292,10 @@
 </li>
       <li><a href="api/deepecho.benchmark.simple.html#module-deepecho.benchmark.simple">deepecho.benchmark.simple (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.benchmark.tsfile.html#module-deepecho.benchmark.tsfile">deepecho.benchmark.tsfile (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.dataset.html#module-deepecho.dataset">deepecho.dataset (module)</a>
 </li>
       <li><a href="api/deepecho.model.html#module-deepecho.model">deepecho.model (module)</a>
@@ -284,6 +303,10 @@
       <li><a href="api/deepecho.model.alpha.html#module-deepecho.model.alpha">deepecho.model.alpha (module)</a>
 </li>
       <li><a href="api/deepecho.model.base.html#module-deepecho.model.base">deepecho.model.base (module)</a>
+</li>
+      <li><a href="api/deepecho.model.beta.html#module-deepecho.model.beta">deepecho.model.beta (module)</a>
+</li>
+      <li><a href="api/deepecho.model.gamma.html#module-deepecho.model.gamma">deepecho.model.gamma (module)</a>
 </li>
       <li><a href="api/deepecho.html#deepecho.Dataset.df">df (deepecho.Dataset attribute)</a>
 
@@ -328,6 +351,14 @@
 </li>
         <li><a href="api/deepecho.model.base.html#deepecho.model.base.Model.fit">(deepecho.model.base.Model method)</a>
 </li>
+        <li><a href="api/deepecho.model.beta.html#deepecho.model.beta.BetaModel.fit">(deepecho.model.beta.BetaModel method)</a>
+</li>
+        <li><a href="api/deepecho.model.html#deepecho.model.BetaModel.fit">(deepecho.model.BetaModel method)</a>
+</li>
+        <li><a href="api/deepecho.model.gamma.html#deepecho.model.gamma.GammaModel.fit">(deepecho.model.gamma.GammaModel method)</a>
+</li>
+        <li><a href="api/deepecho.model.html#deepecho.model.GammaModel.fit">(deepecho.model.GammaModel method)</a>
+</li>
         <li><a href="api/deepecho.model.html#deepecho.model.Model.fit">(deepecho.model.Model method)</a>
 </li>
       </ul></li>
@@ -346,7 +377,29 @@
 </li>
       </ul></li>
       <li><a href="api/deepecho.model.alpha.html#deepecho.model.alpha.Alpha1.forward">forward() (deepecho.model.alpha.Alpha1 method)</a>
+
+      <ul>
+        <li><a href="api/deepecho.model.beta.html#deepecho.model.beta.Beta.forward">(deepecho.model.beta.Beta method)</a>
 </li>
+        <li><a href="api/deepecho.model.gamma.html#deepecho.model.gamma.Gamma.forward">(deepecho.model.gamma.Gamma method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.model.gamma.html#deepecho.model.gamma.Gamma">Gamma (class in deepecho.model.gamma)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.model.html#deepecho.model.GammaModel">GammaModel (class in deepecho.model)</a>
+
+      <ul>
+        <li><a href="api/deepecho.model.gamma.html#deepecho.model.gamma.GammaModel">(class in deepecho.model.gamma)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -388,9 +441,19 @@
 </li>
         <li><a href="api/deepecho.model.base.html#deepecho.model.base.Model.sample">(deepecho.model.base.Model method)</a>
 </li>
+        <li><a href="api/deepecho.model.beta.html#deepecho.model.beta.BetaModel.sample">(deepecho.model.beta.BetaModel method)</a>
+</li>
+        <li><a href="api/deepecho.model.html#deepecho.model.BetaModel.sample">(deepecho.model.BetaModel method)</a>
+</li>
+        <li><a href="api/deepecho.model.gamma.html#deepecho.model.gamma.GammaModel.sample">(deepecho.model.gamma.GammaModel method)</a>
+</li>
+        <li><a href="api/deepecho.model.html#deepecho.model.GammaModel.sample">(deepecho.model.GammaModel method)</a>
+</li>
         <li><a href="api/deepecho.model.html#deepecho.model.Model.sample">(deepecho.model.Model method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.benchmark.simple.html#deepecho.benchmark.simple.Simple1.score">score() (deepecho.benchmark.simple.Simple1 method)</a>
 
       <ul>
@@ -407,8 +470,6 @@
         <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Simple3.score">(deepecho.benchmark.Simple3 method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Simple1">Simple1 (class in deepecho.benchmark)</a>
 
       <ul>
