--- a/_modules/deepecho/benchmark/tsfile.html
+++ b/_modules/deepecho/benchmark/tsfile.html
@@ -282,6 +282,7 @@
         <span class="p">}</span></div>
 
 <div class="viewcode-block" id="TSFileBenchmark.fit_and_score"><a class="viewcode-back" href="../../../api/deepecho.benchmark.tsfile.html#deepecho.benchmark.TSFileBenchmark.fit_and_score">[docs]</a>    <span class="k">def</span> <span class="nf">fit_and_score</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">train_x</span><span class="p">,</span> <span class="n">train_y</span><span class="p">,</span> <span class="n">test_x</span><span class="p">,</span> <span class="n">test_y</span><span class="p">):</span>
+        <span class="c1"># TODO: switch to a model that supports variable length sequences</span>
         <span class="n">clf</span> <span class="o">=</span> <span class="n">Pipeline</span><span class="p">([</span>
             <span class="p">(</span><span class="s1">&#39;concatenate&#39;</span><span class="p">,</span> <span class="n">ColumnConcatenator</span><span class="p">()),</span>
             <span class="p">(</span><span class="s1">&#39;classify&#39;</span><span class="p">,</span> <span class="n">TimeSeriesForestClassifier</span><span class="p">())</span>
