--- a/_modules/index.html
+++ b/_modules/index.html
@@ -199,6 +199,7 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="deepecho/benchmark/base.html">deepecho.benchmark.base</a></li>
+<li><a href="deepecho/benchmark/conditional.html">deepecho.benchmark.conditional</a></li>
 <li><a href="deepecho/benchmark/simple.html">deepecho.benchmark.simple</a></li>
 <li><a href="deepecho/benchmark/tsfile.html">deepecho.benchmark.tsfile</a></li>
 <li><a href="deepecho/dataset.html">deepecho.dataset</a></li>
