--- a/genindex.html
+++ b/genindex.html
@@ -281,6 +281,14 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Conditional1">Conditional1 (class in deepecho.benchmark)</a>
+
+      <ul>
+        <li><a href="api/deepecho.benchmark.conditional.html#deepecho.benchmark.conditional.Conditional1">(class in deepecho.benchmark.conditional)</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="D">D</h2>
@@ -297,6 +305,8 @@
       <li><a href="api/deepecho.benchmark.html#module-deepecho.benchmark">deepecho.benchmark (module)</a>
 </li>
       <li><a href="api/deepecho.benchmark.base.html#module-deepecho.benchmark.base">deepecho.benchmark.base (module)</a>
+</li>
+      <li><a href="api/deepecho.benchmark.conditional.html#module-deepecho.benchmark.conditional">deepecho.benchmark.conditional (module)</a>
 </li>
       <li><a href="api/deepecho.benchmark.simple.html#module-deepecho.benchmark.simple">deepecho.benchmark.simple (module)</a>
 </li>
@@ -328,6 +338,12 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.html#deepecho.Dataset.entity_df">entity_df (deepecho.Dataset attribute)</a>
+
+      <ul>
+        <li><a href="api/deepecho.dataset.html#deepecho.dataset.Dataset.entity_df">(deepecho.dataset.Dataset attribute)</a>
+</li>
+      </ul></li>
       <li><a href="api/deepecho.html#deepecho.Dataset.entity_idx">entity_idx (deepecho.Dataset attribute)</a>
 
       <ul>
@@ -338,6 +354,10 @@
 
       <ul>
         <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Benchmark.evaluate">(deepecho.benchmark.Benchmark method)</a>
+</li>
+        <li><a href="api/deepecho.benchmark.conditional.html#deepecho.benchmark.conditional.Conditional1.evaluate">(deepecho.benchmark.conditional.Conditional1 method)</a>
+</li>
+        <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Conditional1.evaluate">(deepecho.benchmark.Conditional1 method)</a>
 </li>
         <li><a href="api/deepecho.benchmark.simple.html#deepecho.benchmark.simple.SimpleBenchmark.evaluate">(deepecho.benchmark.simple.SimpleBenchmark method)</a>
 </li>
@@ -426,9 +446,13 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.simple.html#deepecho.benchmark.simple.Simple1.sample">sample() (deepecho.benchmark.simple.Simple1 method)</a>
+      <li><a href="api/deepecho.benchmark.conditional.html#deepecho.benchmark.conditional.Conditional1.sample">sample() (deepecho.benchmark.conditional.Conditional1 method)</a>
 
       <ul>
+        <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Conditional1.sample">(deepecho.benchmark.Conditional1 method)</a>
+</li>
+        <li><a href="api/deepecho.benchmark.simple.html#deepecho.benchmark.simple.Simple1.sample">(deepecho.benchmark.simple.Simple1 method)</a>
+</li>
         <li><a href="api/deepecho.benchmark.simple.html#deepecho.benchmark.simple.Simple2.sample">(deepecho.benchmark.simple.Simple2 method)</a>
 </li>
         <li><a href="api/deepecho.benchmark.simple.html#deepecho.benchmark.simple.Simple3.sample">(deepecho.benchmark.simple.Simple3 method)</a>
