--- a/_modules/deepecho/benchmark/simple.html
+++ b/_modules/deepecho/benchmark/simple.html
@@ -384,7 +384,7 @@
 
 
 <div class="viewcode-block" id="Simple3"><a class="viewcode-back" href="../../../api/deepecho.benchmark.simple.html#deepecho.benchmark.Simple3">[docs]</a><span class="k">class</span> <span class="nc">Simple3</span><span class="p">(</span><span class="n">SimpleBenchmark</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Variable-length time-series with continuous values.</span>
+    <span class="sd">&quot;&quot;&quot;Variable-length time-series with continuous and categorical values.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">nb_entities</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
