--- a/_modules/index.html
+++ b/_modules/index.html
@@ -191,11 +191,10 @@
   <h1>All modules for which code is available</h1>
 <ul><li><a href="deepecho/base.html">deepecho.base</a></li>
 <li><a href="deepecho/benchmark.html">deepecho.benchmark</a></li>
-<ul><li><a href="deepecho/benchmark/classifier.html">deepecho.benchmark.classifier</a></li>
-<li><a href="deepecho/benchmark/download.html">deepecho.benchmark.download</a></li>
-<li><a href="deepecho/benchmark/tasks/base.html">deepecho.benchmark.tasks.base</a></li>
-<li><a href="deepecho/benchmark/tasks/classification.html">deepecho.benchmark.tasks.classification</a></li>
-<li><a href="deepecho/benchmark/tasks/simple.html">deepecho.benchmark.tasks.simple</a></li>
+<ul><li><a href="deepecho/benchmark/dataset.html">deepecho.benchmark.dataset</a></li>
+<li><a href="deepecho/benchmark/evaluation.html">deepecho.benchmark.evaluation</a></li>
+<li><a href="deepecho/benchmark/metrics/classification.html">deepecho.benchmark.metrics.classification</a></li>
+<li><a href="deepecho/benchmark/metrics/sdmetrics.html">deepecho.benchmark.metrics.sdmetrics</a></li>
 </ul><li><a href="deepecho/demo.html">deepecho.demo</a></li>
 <li><a href="deepecho/par.html">deepecho.par</a></li>
 </ul>
