--- a/genindex.html
+++ b/genindex.html
@@ -199,33 +199,26 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#C"><strong>C</strong></a>
- | <a href="#D"><strong>D</strong></a>
+ <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
- | <a href="#T"><strong>T</strong></a>
  | <a href="#V"><strong>V</strong></a>
  
 </div>
-<h2 id="C">C</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.tasks.html#deepecho.benchmark.tasks.ClassificationTask">ClassificationTask (class in deepecho.benchmark.tasks)</a>
-
-      <ul>
-        <li><a href="api/deepecho.benchmark.tasks.classification.html#deepecho.benchmark.tasks.classification.ClassificationTask">(class in deepecho.benchmark.tasks.classification)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Dataset">Dataset (class in deepecho.benchmark)</a>
+
+      <ul>
+        <li><a href="api/deepecho.benchmark.dataset.html#deepecho.benchmark.dataset.Dataset">(class in deepecho.benchmark.dataset)</a>
+</li>
+      </ul></li>
       <li><a href="api/deepecho.html#deepecho.DeepEcho">DeepEcho (class in deepecho)</a>
 
       <ul>
@@ -238,25 +231,21 @@
 </li>
       <li><a href="api/deepecho.benchmark.html#module-deepecho.benchmark">deepecho.benchmark (module)</a>
 </li>
-      <li><a href="api/deepecho.benchmark.classifier.html#module-deepecho.benchmark.classifier">deepecho.benchmark.classifier (module)</a>
-</li>
-      <li><a href="api/deepecho.benchmark.download.html#module-deepecho.benchmark.download">deepecho.benchmark.download (module)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.tasks.html#module-deepecho.benchmark.tasks">deepecho.benchmark.tasks (module)</a>
+      <li><a href="api/deepecho.benchmark.dataset.html#module-deepecho.benchmark.dataset">deepecho.benchmark.dataset (module)</a>
 </li>
-      <li><a href="api/deepecho.benchmark.tasks.base.html#module-deepecho.benchmark.tasks.base">deepecho.benchmark.tasks.base (module)</a>
+      <li><a href="api/deepecho.benchmark.evaluation.html#module-deepecho.benchmark.evaluation">deepecho.benchmark.evaluation (module)</a>
 </li>
-      <li><a href="api/deepecho.benchmark.tasks.classification.html#module-deepecho.benchmark.tasks.classification">deepecho.benchmark.tasks.classification (module)</a>
+      <li><a href="api/deepecho.benchmark.metrics.html#module-deepecho.benchmark.metrics">deepecho.benchmark.metrics (module)</a>
 </li>
-      <li><a href="api/deepecho.benchmark.tasks.simple.html#module-deepecho.benchmark.tasks.simple">deepecho.benchmark.tasks.simple (module)</a>
+      <li><a href="api/deepecho.benchmark.metrics.classification.html#module-deepecho.benchmark.metrics.classification">deepecho.benchmark.metrics.classification (module)</a>
+</li>
+      <li><a href="api/deepecho.benchmark.metrics.sdmetrics.html#module-deepecho.benchmark.metrics.sdmetrics">deepecho.benchmark.metrics.sdmetrics (module)</a>
 </li>
       <li><a href="api/deepecho.demo.html#module-deepecho.demo">deepecho.demo (module)</a>
 </li>
       <li><a href="api/deepecho.par.html#module-deepecho.par">deepecho.par (module)</a>
-</li>
-      <li><a href="api/deepecho.benchmark.download.html#deepecho.benchmark.download.download">download() (in module deepecho.benchmark.download)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -264,20 +253,8 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.tasks.base.html#deepecho.benchmark.tasks.base.Task.evaluate">evaluate() (deepecho.benchmark.tasks.base.Task method)</a>
-
-      <ul>
-        <li><a href="api/deepecho.benchmark.tasks.classification.html#deepecho.benchmark.tasks.classification.ClassificationTask.evaluate">(deepecho.benchmark.tasks.classification.ClassificationTask method)</a>
+      <li><a href="api/deepecho.benchmark.evaluation.html#deepecho.benchmark.evaluation.evaluate_model_on_datasets">evaluate_model_on_datasets() (in module deepecho.benchmark.evaluation)</a>
 </li>
-        <li><a href="api/deepecho.benchmark.tasks.html#deepecho.benchmark.tasks.ClassificationTask.evaluate">(deepecho.benchmark.tasks.ClassificationTask method)</a>
-</li>
-        <li><a href="api/deepecho.benchmark.tasks.simple.html#deepecho.benchmark.tasks.simple.SimpleTask.evaluate">(deepecho.benchmark.tasks.simple.SimpleTask method)</a>
-</li>
-        <li><a href="api/deepecho.benchmark.tasks.html#deepecho.benchmark.tasks.SimpleTask.evaluate">(deepecho.benchmark.tasks.SimpleTask method)</a>
-</li>
-        <li><a href="api/deepecho.benchmark.tasks.html#deepecho.benchmark.tasks.Task.evaluate">(deepecho.benchmark.tasks.Task method)</a>
-</li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -287,8 +264,6 @@
       <li><a href="api/deepecho.base.html#deepecho.base.DeepEcho.fit">fit() (deepecho.base.DeepEcho method)</a>
 
       <ul>
-        <li><a href="api/deepecho.benchmark.classifier.html#deepecho.benchmark.classifier.TimeSeriesClassifier.fit">(deepecho.benchmark.classifier.TimeSeriesClassifier method)</a>
-</li>
         <li><a href="api/deepecho.html#deepecho.DeepEcho.fit">(deepecho.DeepEcho method)</a>
 </li>
       </ul></li>
@@ -309,16 +284,20 @@
   </ul></td>
 </tr></table>
 
-<h2 id="L">L</h2>
+<h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.tasks.base.html#deepecho.benchmark.tasks.base.Task.load">load() (deepecho.benchmark.tasks.base.Task class method)</a>
+      <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.get_datasets_list">get_datasets_list() (in module deepecho.benchmark)</a>
 
       <ul>
-        <li><a href="api/deepecho.benchmark.tasks.html#deepecho.benchmark.tasks.Task.load">(deepecho.benchmark.tasks.Task class method)</a>
+        <li><a href="api/deepecho.benchmark.dataset.html#deepecho.benchmark.dataset.get_datasets_list">(in module deepecho.benchmark.dataset)</a>
 </li>
       </ul></li>
   </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.demo.html#deepecho.demo.load_demo">load_demo() (in module deepecho.demo)</a>
 </li>
@@ -343,6 +322,14 @@
 
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.real_vs_synthetic_score">real_vs_synthetic_score() (in module deepecho.benchmark.metrics)</a>
+
+      <ul>
+        <li><a href="api/deepecho.benchmark.metrics.classification.html#deepecho.benchmark.metrics.classification.real_vs_synthetic_score">(in module deepecho.benchmark.metrics.classification)</a>
+</li>
+      </ul></li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.run_benchmark">run_benchmark() (in module deepecho.benchmark)</a>
 </li>
@@ -370,30 +357,18 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.classifier.html#deepecho.benchmark.classifier.TimeSeriesClassifier.score">score() (deepecho.benchmark.classifier.TimeSeriesClassifier method)</a>
-</li>
-      <li><a href="api/deepecho.benchmark.tasks.html#deepecho.benchmark.tasks.SimpleTask">SimpleTask (class in deepecho.benchmark.tasks)</a>
+      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.sdmetrics_overall">sdmetrics_overall() (in module deepecho.benchmark.metrics)</a>
 
       <ul>
-        <li><a href="api/deepecho.benchmark.tasks.simple.html#deepecho.benchmark.tasks.simple.SimpleTask">(class in deepecho.benchmark.tasks.simple)</a>
+        <li><a href="api/deepecho.benchmark.metrics.sdmetrics.html#deepecho.benchmark.metrics.sdmetrics.sdmetrics_overall">(in module deepecho.benchmark.metrics.sdmetrics)</a>
 </li>
       </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="T">T</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.tasks.html#deepecho.benchmark.tasks.Task">Task (class in deepecho.benchmark.tasks)</a>
+      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.simple_detection_score">simple_detection_score() (in module deepecho.benchmark.metrics)</a>
 
       <ul>
-        <li><a href="api/deepecho.benchmark.tasks.base.html#deepecho.benchmark.tasks.base.Task">(class in deepecho.benchmark.tasks.base)</a>
+        <li><a href="api/deepecho.benchmark.metrics.classification.html#deepecho.benchmark.metrics.classification.simple_detection_score">(in module deepecho.benchmark.metrics.classification)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.classifier.html#deepecho.benchmark.classifier.TimeSeriesClassifier">TimeSeriesClassifier (class in deepecho.benchmark.classifier)</a>
-</li>
   </ul></td>
 </tr></table>
 
