--- a/_modules/deepecho/benchmark/evaluation.html
+++ b/_modules/deepecho/benchmark/evaluation.html
@@ -203,19 +203,27 @@
 <span class="n">LOGGER</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
 
-<span class="k">def</span> <span class="nf">_evaluate_model_on_dataset</span><span class="p">(</span><span class="n">model_class</span><span class="p">,</span> <span class="n">model_kwargs</span><span class="p">,</span> <span class="n">dataset</span><span class="p">,</span> <span class="n">metrics</span><span class="p">):</span>
-    <span class="n">LOGGER</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s1">&#39;Evaluating model </span><span class="si">%s</span><span class="s1"> on </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span> <span class="n">model_class</span><span class="o">.</span><span class="vm">__name__</span><span class="p">,</span> <span class="n">dataset</span><span class="p">)</span>
+<span class="k">def</span> <span class="nf">_evaluate_model_on_dataset</span><span class="p">(</span><span class="n">name</span><span class="p">,</span> <span class="n">model</span><span class="p">,</span> <span class="n">dataset</span><span class="p">,</span> <span class="n">metrics</span><span class="p">,</span> <span class="n">max_entities</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+    <span class="n">LOGGER</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s1">&#39;Evaluating model </span><span class="si">%s</span><span class="s1"> on </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">dataset</span><span class="p">)</span>
+
     <span class="n">result</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="s1">&#39;model&#39;</span><span class="p">:</span> <span class="n">model_class</span><span class="o">.</span><span class="vm">__name__</span><span class="p">,</span>
+        <span class="s1">&#39;model&#39;</span><span class="p">:</span> <span class="n">name</span><span class="p">,</span>
         <span class="s1">&#39;dataset&#39;</span><span class="p">:</span> <span class="nb">str</span><span class="p">(</span><span class="n">dataset</span><span class="p">)</span>
     <span class="p">}</span>
     <span class="n">start</span> <span class="o">=</span> <span class="n">datetime</span><span class="o">.</span><span class="n">utcnow</span><span class="p">()</span>
 
     <span class="k">try</span><span class="p">:</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
-            <span class="n">dataset</span> <span class="o">=</span> <span class="n">Dataset</span><span class="p">(</span><span class="n">dataset</span><span class="p">)</span>
+            <span class="n">dataset</span> <span class="o">=</span> <span class="n">Dataset</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">max_entities</span><span class="o">=</span><span class="n">max_entities</span><span class="p">)</span>
+        <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
+            <span class="n">dataset</span> <span class="o">=</span> <span class="n">Dataset</span><span class="p">(</span><span class="o">*</span><span class="n">dataset</span><span class="p">)</span>
 
-        <span class="n">model</span> <span class="o">=</span> <span class="n">model_class</span><span class="p">(</span><span class="o">**</span><span class="n">model_kwargs</span><span class="p">)</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="nb">tuple</span><span class="p">):</span>
+            <span class="n">model_class</span><span class="p">,</span> <span class="n">model_kwargs</span> <span class="o">=</span> <span class="n">model</span>
+            <span class="n">model</span> <span class="o">=</span> <span class="n">model_class</span><span class="p">(</span><span class="o">**</span><span class="n">model_kwargs</span><span class="p">)</span>
+        <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="nb">type</span><span class="p">):</span>
+            <span class="n">model</span> <span class="o">=</span> <span class="n">model_class</span><span class="p">()</span>
+
         <span class="n">model</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span>
             <span class="n">data</span><span class="o">=</span><span class="n">dataset</span><span class="o">.</span><span class="n">data</span><span class="p">,</span>
             <span class="n">entity_columns</span><span class="o">=</span><span class="n">dataset</span><span class="o">.</span><span class="n">entity_columns</span><span class="p">,</span>
@@ -247,28 +255,29 @@
                 <span class="n">result</span><span class="p">[</span><span class="n">name</span> <span class="o">+</span> <span class="s1">&#39;_time&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span><span class="n">metric_end</span> <span class="o">-</span> <span class="n">metric_start</span><span class="p">)</span><span class="o">.</span><span class="n">total_seconds</span><span class="p">()</span>
                 <span class="n">metric_start</span> <span class="o">=</span> <span class="n">metric_end</span>
             <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
-                <span class="n">LOGGER</span><span class="o">.</span><span class="n">exception</span><span class="p">(</span><span class="s1">&#39;Error running metric </span><span class="si">%s</span><span class="s1"> dataset </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span>
-                                 <span class="n">name</span><span class="p">,</span> <span class="n">dataset</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
+                <span class="n">LOGGER</span><span class="o">.</span><span class="n">exception</span><span class="p">(</span><span class="s1">&#39;Error running metric </span><span class="si">%s</span><span class="s1"> dataset </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="nb">str</span><span class="p">(</span><span class="n">dataset</span><span class="p">))</span>
 
     <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
-        <span class="n">LOGGER</span><span class="o">.</span><span class="n">exception</span><span class="p">(</span><span class="s1">&#39;Error running model </span><span class="si">%s</span><span class="s1"> on dataset </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span>
-                         <span class="n">model_class</span><span class="o">.</span><span class="vm">__name__</span><span class="p">,</span> <span class="n">dataset</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
+        <span class="n">LOGGER</span><span class="o">.</span><span class="n">exception</span><span class="p">(</span><span class="s1">&#39;Error running model </span><span class="si">%s</span><span class="s1"> on dataset </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="nb">str</span><span class="p">(</span><span class="n">dataset</span><span class="p">))</span>
 
     <span class="k">return</span> <span class="n">result</span>
 
 
-<div class="viewcode-block" id="evaluate_model_on_datasets"><a class="viewcode-back" href="../../../api/deepecho.benchmark.evaluation.html#deepecho.benchmark.evaluation.evaluate_model_on_datasets">[docs]</a><span class="k">def</span> <span class="nf">evaluate_model_on_datasets</span><span class="p">(</span><span class="n">model_class</span><span class="p">,</span> <span class="n">model_kwargs</span><span class="p">,</span> <span class="n">datasets</span><span class="p">,</span> <span class="n">metrics</span><span class="p">,</span> <span class="n">distributed</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+<div class="viewcode-block" id="evaluate_model_on_datasets"><a class="viewcode-back" href="../../../api/deepecho.benchmark.evaluation.html#deepecho.benchmark.evaluation.evaluate_model_on_datasets">[docs]</a><span class="k">def</span> <span class="nf">evaluate_model_on_datasets</span><span class="p">(</span><span class="n">name</span><span class="p">,</span> <span class="n">model</span><span class="p">,</span> <span class="n">datasets</span><span class="p">,</span> <span class="n">metrics</span><span class="p">,</span>
+                               <span class="n">max_entities</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">distributed</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Evaluate the given model on a list of datasets.</span>
 
 <span class="sd">    Args:</span>
-<span class="sd">        model_class (class):</span>
-<span class="sd">            Class of the model to evaluate.</span>
-<span class="sd">        model_kwargs (dict):</span>
-<span class="sd">            Arguments to initialize the model with.</span>
+<span class="sd">        model (class):</span>
+<span class="sd">            Class of the model to evaluate or tuple containing the model</span>
+<span class="sd">            class and the keyword arguments to use to initialize it.</span>
 <span class="sd">        datasets (list):</span>
 <span class="sd">            List of datasets in which to evaluate the model.</span>
 <span class="sd">        metrics (dict):</span>
 <span class="sd">            Dict of metrics to use for the evaluation.</span>
+<span class="sd">        max_entities (int):</span>
+<span class="sd">            Max number of entities to load per dataset.</span>
+<span class="sd">            Defaults to ``None``.</span>
 <span class="sd">        distributed (bool):</span>
 <span class="sd">            Whether to use dask for distributed computing.</span>
 <span class="sd">            Defaults to ``False``.</span>
@@ -288,7 +297,7 @@
         <span class="n">function</span> <span class="o">=</span> <span class="n">_evaluate_model_on_dataset</span>
 
     <span class="k">for</span> <span class="n">dataset</span> <span class="ow">in</span> <span class="n">datasets</span><span class="p">:</span>
-        <span class="n">result</span> <span class="o">=</span> <span class="n">function</span><span class="p">(</span><span class="n">model_class</span><span class="p">,</span> <span class="n">model_kwargs</span><span class="p">,</span> <span class="n">dataset</span><span class="p">,</span> <span class="n">metrics</span><span class="p">)</span>
+        <span class="n">result</span> <span class="o">=</span> <span class="n">function</span><span class="p">(</span><span class="n">name</span><span class="p">,</span> <span class="n">model</span><span class="p">,</span> <span class="n">dataset</span><span class="p">,</span> <span class="n">metrics</span><span class="p">,</span> <span class="n">max_entities</span><span class="p">)</span>
         <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">result</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">results</span></div>
