--- a/_modules/index.html
+++ b/_modules/index.html
@@ -193,6 +193,7 @@
 <li><a href="deepecho/benchmark.html">deepecho.benchmark</a></li>
 <ul><li><a href="deepecho/benchmark/dataset.html">deepecho.benchmark.dataset</a></li>
 <li><a href="deepecho/benchmark/evaluation.html">deepecho.benchmark.evaluation</a></li>
+<li><a href="deepecho/benchmark/kubernetes.html">deepecho.benchmark.kubernetes</a></li>
 <li><a href="deepecho/benchmark/metrics/classification.html">deepecho.benchmark.metrics.classification</a></li>
 <li><a href="deepecho/benchmark/metrics/sdmetrics.html">deepecho.benchmark.metrics.sdmetrics</a></li>
 </ul><li><a href="deepecho/demo.html">deepecho.demo</a></li>
