--- a/genindex.html
+++ b/genindex.html
@@ -199,17 +199,31 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#D"><strong>D</strong></a>
+ <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#V"><strong>V</strong></a>
  
 </div>
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.classification_score">classification_score() (in module deepecho.benchmark.metrics)</a>
+
+      <ul>
+        <li><a href="api/deepecho.benchmark.metrics.classification.html#deepecho.benchmark.metrics.classification.classification_score">(in module deepecho.benchmark.metrics.classification)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -231,11 +245,13 @@
 </li>
       <li><a href="api/deepecho.benchmark.html#module-deepecho.benchmark">deepecho.benchmark (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.benchmark.dataset.html#module-deepecho.benchmark.dataset">deepecho.benchmark.dataset (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.benchmark.evaluation.html#module-deepecho.benchmark.evaluation">deepecho.benchmark.evaluation (module)</a>
+</li>
+      <li><a href="api/deepecho.benchmark.kubernetes.html#module-deepecho.benchmark.kubernetes">deepecho.benchmark.kubernetes (module)</a>
 </li>
       <li><a href="api/deepecho.benchmark.metrics.html#module-deepecho.benchmark.metrics">deepecho.benchmark.metrics (module)</a>
 </li>
@@ -247,6 +263,12 @@
 </li>
       <li><a href="api/deepecho.par.html#module-deepecho.par">deepecho.par (module)</a>
 </li>
+      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.detection_score">detection_score() (in module deepecho.benchmark.metrics)</a>
+
+      <ul>
+        <li><a href="api/deepecho.benchmark.metrics.classification.html#deepecho.benchmark.metrics.classification.detection_score">(in module deepecho.benchmark.metrics.classification)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -304,6 +326,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.benchmark.kubernetes.html#deepecho.benchmark.kubernetes.main">main() (in module deepecho.benchmark.kubernetes)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -323,15 +353,13 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.real_vs_synthetic_score">real_vs_synthetic_score() (in module deepecho.benchmark.metrics)</a>
-
-      <ul>
-        <li><a href="api/deepecho.benchmark.metrics.classification.html#deepecho.benchmark.metrics.classification.real_vs_synthetic_score">(in module deepecho.benchmark.metrics.classification)</a>
+      <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.run_benchmark">run_benchmark() (in module deepecho.benchmark)</a>
 </li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.run_benchmark">run_benchmark() (in module deepecho.benchmark)</a>
+      <li><a href="api/deepecho.benchmark.kubernetes.html#deepecho.benchmark.kubernetes.run_dask_function">run_dask_function() (in module deepecho.benchmark.kubernetes)</a>
+</li>
+      <li><a href="api/deepecho.benchmark.kubernetes.html#deepecho.benchmark.kubernetes.run_on_kubernetes">run_on_kubernetes() (in module deepecho.benchmark.kubernetes)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -357,16 +385,10 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.sdmetrics_overall">sdmetrics_overall() (in module deepecho.benchmark.metrics)</a>
+      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.sdmetrics_score">sdmetrics_score() (in module deepecho.benchmark.metrics)</a>
 
       <ul>
-        <li><a href="api/deepecho.benchmark.metrics.sdmetrics.html#deepecho.benchmark.metrics.sdmetrics.sdmetrics_overall">(in module deepecho.benchmark.metrics.sdmetrics)</a>
-</li>
-      </ul></li>
-      <li><a href="api/deepecho.benchmark.metrics.html#deepecho.benchmark.metrics.simple_detection_score">simple_detection_score() (in module deepecho.benchmark.metrics)</a>
-
-      <ul>
-        <li><a href="api/deepecho.benchmark.metrics.classification.html#deepecho.benchmark.metrics.classification.simple_detection_score">(in module deepecho.benchmark.metrics.classification)</a>
+        <li><a href="api/deepecho.benchmark.metrics.sdmetrics.html#deepecho.benchmark.metrics.sdmetrics.sdmetrics_score">(in module deepecho.benchmark.metrics.sdmetrics)</a>
 </li>
       </ul></li>
   </ul></td>
