--- a/_modules/deepecho/benchmark/metrics/sdmetrics.html
+++ b/_modules/deepecho/benchmark/metrics/sdmetrics.html
@@ -198,7 +198,7 @@
 <span class="kn">import</span> <span class="nn">sdmetrics</span>
 
 
-<div class="viewcode-block" id="sdmetrics_overall"><a class="viewcode-back" href="../../../../api/deepecho.benchmark.metrics.sdmetrics.html#deepecho.benchmark.metrics.sdmetrics_overall">[docs]</a><span class="k">def</span> <span class="nf">sdmetrics_overall</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">synthetic</span><span class="p">):</span>
+<div class="viewcode-block" id="sdmetrics_score"><a class="viewcode-back" href="../../../../api/deepecho.benchmark.metrics.sdmetrics.html#deepecho.benchmark.metrics.sdmetrics_score">[docs]</a><span class="k">def</span> <span class="nf">sdmetrics_score</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">synthetic</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Compare the real and the synthetic data using SDMetrics.</span>
 
 <span class="sd">    The returned score is the overall score of the SDMetrics report.</span>
