--- a/_modules/deepecho/benchmark.html
+++ b/_modules/deepecho/benchmark.html
@@ -306,9 +306,11 @@
 <span class="sd">            If a list of model names are passed, they are taken from the</span>
 <span class="sd">            ``DEFAULT_MODELS`` dictionary.</span>
 <span class="sd">            If not passed at all, the complete ``DEFAULT_MODELS`` dict is used.</span>
-<span class="sd">        datasets (list):</span>
+<span class="sd">        datasets (list or int):</span>
 <span class="sd">            List of datasets in which to evaluate the model. They can be</span>
 <span class="sd">            passed as dataset instances or as dataset names or paths.</span>
+<span class="sd">            If an integer is passed, the corresponding number of datasets</span>
+<span class="sd">            will be tested, starting by the smallest ones.</span>
 <span class="sd">            If not passed, all the available datasets are used.</span>
 <span class="sd">        metrics (list):</span>
 <span class="sd">            List of metric names to use.</span>
@@ -333,6 +335,9 @@
 
     <span class="k">if</span> <span class="n">datasets</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">datasets</span> <span class="o">=</span> <span class="n">get_datasets_list</span><span class="p">()</span>
+        <span class="n">datasets</span> <span class="o">=</span> <span class="n">get_datasets_list</span><span class="p">()[</span><span class="s1">&#39;dataset&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">tolist</span><span class="p">()</span>
+    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">datasets</span><span class="p">,</span> <span class="nb">int</span><span class="p">):</span>
+        <span class="n">datasets</span> <span class="o">=</span> <span class="n">get_datasets_list</span><span class="p">()</span><span class="o">.</span><span class="n">head</span><span class="p">(</span><span class="n">datasets</span><span class="p">)[</span><span class="s1">&#39;dataset&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">tolist</span><span class="p">()</span>
 
     <span class="n">delayed</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">name</span><span class="p">,</span> <span class="n">model</span> <span class="ow">in</span> <span class="n">models</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
